--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: Monsieur-de-Camors-Volume-1_3943
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Paris (France) -- Fiction'
 - !lcc 'PQ'
+- GITenberg
 title: Monsieur de Camors — Volume 1
 url: http://www.gutenberg.org/ebooks/3943
